sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:2: error: ';' expected but '=' found.
deplacerCase(i:Int):Boolean =
                            ^