sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
deplacerCase(i:Int):Boolean =
{
  if (plusPetit(i + 1, i))
    echange(i, i + 1)
}

def listeTriee():Boolean =
{
  for (i <- 0 to getNombreValeurs() - 2)
  	if (plusPetit(i + 1, i))
  		return false
  
  return true
}

def bubbleSort()
{
  while (!listeTriee())
  {    
    for (i <- 0 to getNombreValeurs() - 2)
      deplacerCase(i)
  }
}